Update html for development

--- a/Deployment/Binary Classification with RFC.html
+++ b/Deployment/Binary Classification with RFC.html
@@ -102,6 +102,111 @@
                     </select>
                 </div>
         </div>
+        <div class="form-group row">          
+            <label for="umur" class="col-sm-2 col-form-label">umur:</label>
+                <div class="col-sm-5">
+                    <select id="umur_type" name="umur" class="custom-select my-1 mr-sm-1">
+                        <option value="none"></option>
+                        <option value="satu">satu</option>
+                        <option value="dua">dua</option>
+                        <option value="tiga">tiga</option>
+                        <option value="empat">empat</option>
+                        <option value="lima">lima</option>
+                    </select>
+                </div>
+        </div>
+        <div class="form-group row">          
+            <label for="los" class="col-sm-2 col-form-label">los:</label>
+                <div class="col-sm-5">
+                    <select id="los_type" name="los" class="custom-select my-1 mr-sm-1">
+                        <option value="none"></option>
+                        <option value="los_rawat_jalan">rawat jalan</option>
+                        <option value="los_short_stay">short stay</option>
+                        <option value="los_medium_stay">medium stay</option>
+                        <option value="los_long_stay">long stay</option>
+                    </select>
+                </div>
+        </div>
+        <div class="form-group row">          
+            <label for="proc" class="col-sm-2 col-form-label" >proc:</label>
+                <div class="col-sm-5">
+                    <select id="proc_type" name="proc" class="custom-select my-1 mr-sm-1">
+                        <option value="none"></option>
+                        <option value="proc00_13">00_13</option>
+                        <option value="proc14_23">14_23</option>
+                        <option value="proc24_27">24_27</option>
+                        <option value="proc28_28">28_28</option>
+                        <option value="proc29_31">29_31</option>
+                        <option value="proc_32_38">32_38</option>
+                        <option value="proc39_45">39_45</option>
+                        <option value="proc46_51">46_51</option>
+                        <option value="proc52_57">52_57</option>
+                        <option value="proc68_70">68_70</option>
+                        <option value="proc71_73">71_73</option>
+                        <option value="proc74_75">74_75</option>
+                        <option value="proc76_77">76_77</option>
+                        <option value="proc78_79">78_79</option>
+                        <option value="proc80_99">80_99</option>
+                        <option value="proce00_e99">e00_e99</option>
+                    </select>
+                </div>
+        </div>        
+        <div class="form-group row">          
+            <label for="dx2" class="col-sm-2 col-form-label" >dx2:</label>
+                <div class="col-sm-5">
+                    <select id="dx2_type" name="dx2" class="custom-select my-1 mr-sm-1">
+                        <option value="none"></option>
+                        <option value="dx2_a00_b99">a00_b99</option>
+                        <option value="dx2_c00_d48">c00_d48</option>
+                        <option value="dx2_d50_d89">d50_d89</option>
+                        <option value="dx2_e00_e90">e00_e90</option>
+                        <option value="dx2_f00_f99">f00_f99</option>
+                        <option value="dx2_g00_g99">g00_g99</option>
+                        <option value="dx2_h00_h59">h00_h59</option>
+                        <option value="dx2_h60_h95">h60_h95</option>
+                        <option value="dx2_i00_i99">i00_i99</option>
+                        <option value="dx2_j00_j99">j00_j99</option>
+                        <option value="dx2_k00_k93">k00_k93</option>
+                        <option value="dx2_l00_l99">l00_l99</option>
+                        <option value="dx2_m00_m99">m00_m99</option>
+                        <option value="dx2_n00_n99">n00_n99</option>
+                        <option value="dx2_o00_o99">o00_o99</option>
+                        <option value="dx2_p00_p96">p00_p96</option>
+                        <option value="dx2_q00_q99">q00_q99</option>
+                        <option value="dx2_r00_r99">r00_r99</option>
+                        <option value="dx2_s00_s98">s00_s98</option>
+                        <option value="dx2_u00_u85">u00_u85</option>
+                        <option value="dx2_z00_z99">z00_z99</option>
+                    </select>
+                </div>
+        </div>
+        <div class="form-group row">          
+            <label for="jkpst" class="col-sm-2 col-form-label">jkpst:</label>
+                <div class="col-sm-5">
+                    <select id="proc_type" name="proc" class="custom-select my-1 mr-sm-1">
+                        <option value="none"></option>
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                    </select>
+                </div>
+        </div>
+        <div class="form-group row">          
+            <label for="jnspelsep" class="col-sm-2 col-form-label">jnspelsep:</label>
+                <div class="col-sm-5">
+                    <select id="jnspelsep" name="jnspelsep" class="custom-select my-1 mr-sm-1">
+                        <option value="none"></option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
+                </div>
+        </div>
+        <div class="form-group row">          
+            <label for="kdkc" class="col-sm-2 col-form-label">kdkc:</label>
+                <div class="col-sm-5">
+                    <input name="kdkc" type="integer" class="form-control" id="kdkc" required="required"
+                    placeholder="Masukkan nilai kdkc">
+                  </div>
+        </div>
         </form>
 </body>
 </html>
